	* BUGFIX - Builtin file selector now properly handles manual edits in directory box
	* BUGFIX - Problem with FreeType text dialog occasionally hiding behind main window is now eliminated
	* BUGFIX - FreeType text renderer now can handle PCF bitmap fonts
	* BUGFIX - FreeType text renderer now properly handles TTF fonts with embedded bitmaps
	* BUGFIX - Redraw lag when moving a dialog over main window in Windows is now greatly reduced (fixed in GTK+)
	* BUGFIX - Ctrl+T key now draws selection outline as it should - keyboard shortcut for text tool is now Shift+T
	* "Distance to A+B" palette sort mode removed due to utter uselessness

3.31	2009-4-15

	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Nylander and Fredrik Forsmo
	* French translation updated by Plume
	* Builtin file selector uses stock file and directory icons on GTK+2
	* Default settings are loaded from file /etc/mtpaint/mtpaintrc if it exists
	* BUGFIX - Compilation with GTK+ colour selector now works
	* BUGFIX - Escape key now works properly in builtin file selector in GTK+1
	* BUGFIX - Filename length in builtin file selector no longer is limited to 100 characters
	* BUGFIX - Resizing the canvas window now doesn't cause polygon marquee to slide out of place
	* BUGFIX - Polygon marquee shrunk by resizing the canvas is now redrawn properly
	* BUGFIX - Problem with message windows not responding to mouse in some cases is now eliminated

3.30	2009-2-12

	* Chinese (Simplified) translation updated by Cecc
	* Dutch translation added by Hans Strijards
	* Italian translation added by Angelo Gemmi
	* Swedish translation added by Daniel Nylander
	* Spanish translation updated by Miguel Anxo Bouzada, Francisco Jose Rey
	* Galician translation updated by Miguel Anxo Bouzada
	* Czech translation updated by Martin Petricek
	* French translation updated by Johan Serre
	* Portuguese translation updated by Tiago Silva
	* Turkish translation updated by Tutku Dalmaz